@@ -131,6 +131,11 @@ HISTORY
 
   ++ Bugfixes:
 
+  2010-02-20: Simon Goldschmidt
+  * tcp.h, tcp.c, tcp_in.c, tcp_out.c: Task #10088: Correctly implement
+    close() vs. shutdown(). Now the application does not get any more
+    recv callbacks after calling tcp_close(). Added tcp_shutdown().
+
   2010-02-19: Simon Goldschmidt
   * mem.c/.h, pbuf.c: Renamed mem_realloc() to mem_trim() to prevent
     confusion with realloc()
